--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.2"
+    "eslint": "^6.3.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.2.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.0",
+    "nodemon": "^1.19.2",
+    "prettier": "^1.18.2"
   }
 }
